--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "firebase": "^10.12.1",
+    "lottie-web": "^5.12.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
